The canvas now covers the image at the correct size. Modified the canvas to respond to the clicks instead of the image.

--- a/csfieldguide/static/interactives/distance-from-stereo-images/css/distance-from-stereo-images.css
+++ b/csfieldguide/static/interactives/distance-from-stereo-images/css/distance-from-stereo-images.css
@@ -3,3 +3,6 @@ img {
   object-fit: cover;
 }
 
+canvas {
+  position: absolute;
+}
